// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid has a label 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-describedby="undefined_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      label
    </label>
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      label
      <br />
    </span>
  </div>
</div>
`;

exports[`Grid has a tip 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <span
      aria-hidden="true"
      class="form-text"
    >
      Type something
    </span>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      Type something
      <br />
    </span>
  </div>
</div>
`;

exports[`Grid has an id 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Grid is not editable 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      disabled=""
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Grid is not required 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Grid renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
  >
    <label
      aria-describedby="undefined_fieldDetails"
      class="ddm-label"
      tabindex="0"
    >
      text
    </label>
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <span
      class="sr-only"
      id="undefined_fieldDetails"
    >
      text
      <br />
    </span>
  </div>
</div>
`;

exports[`Grid renders columns 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
              <th
                class=""
              >
                col2
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row, column: col2"
                      class="custom-control-input form-builder-grid-field"
                      data-name="jehf"
                      name="undefined_jehf"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Grid renders no columns when columns comes empty 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="jehf"
            >
              <td
                class=""
              >
                row
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Grid renders no rows when row comes empty 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </div>
    
  </div>
</div>
`;

exports[`Grid renders rows 1`] = `
<div>
  <div
    aria-labelledby="undefined_fieldDetails"
    class="form-group hide"
    tabindex="0"
  >
    <div
      class="table-responsive"
    >
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <input
        aria-hidden="true"
        class="form-control"
        type="hidden"
        value=""
      />
      <div
        class="table-responsive"
      >
        <table
          class="table table-autofit show-quick-actions-on-hover table-hover table-list table-striped"
        >
          <thead>
            <tr
              class=""
            >
              <th
                class=""
              />
              <th
                class=""
              >
                col1
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class=""
              name="fieldId"
            >
              <td
                class=""
              >
                row1
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row1, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="fieldId"
                      name="undefined_fieldId"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
            <tr
              class=""
              name="fieldId"
            >
              <td
                class=""
              >
                row2
              </td>
              <td
                class=""
              >
                <div
                  class="custom-control custom-radio"
                >
                  <label>
                    <input
                      aria-label="row: row2, column: col1"
                      class="custom-control-input form-builder-grid-field"
                      data-name="fieldId"
                      name="undefined_fieldId"
                      role="radio"
                      type="radio"
                      value="fieldId"
                    />
                    <span
                      class="custom-control-label"
                    />
                  </label>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    
  </div>
</div>
`;
